<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hang Man</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="settings_activity">Hang Man Settings</string>
    <string name="number_of_letters">Number of letters in the word.</string>
    <string name="incorrect_letter">Incorrect letter!</string>
    <string name="restarting_hangman">Hang Man will restart with your new settings</string>
    <string name="ok">OK</string>
    <string name="reset_hangman">Reset Hang Man</string>
    <string name="image_description">Image of the current man on the gallow</string>
    <string name="hang_man_title">Guess the secret word!</string>
    <string name="options_title">Game Options</string>
    <string name="new_game">New Game</string>
    <string name="guess_word">Guess Word</string>
    <string name="pref_numberOfLetters">Number of Letters</string>
    <string name="number_of_letters_description">Pick between 4, 5, 6, 7, or 8 letter word</string>
    <string name="guess">Guess</string>
    <string name="type_here">Type a letter or phrase here then touch guess</string>
    <string name="guessed_letter">Type letter or word:</string>
    <string name="guesses_left">Guesses Left:</string>
    <string name="letters_guessed">Letters guessed:</string>
   <string name="username">Username:</string>
   <string name="password">Password:</string>
   <string name="Login">Login</string>
   <string name="attempts">Attempts Left:</string>
   <string name="register">Register</string>
   <string name="player_login">Player Login</string>

</resources>
